# dailies

./: CMakeLibrary.cmake  CMakeLists.txt  LICENSE  README.md  memory.c  memory.h
day1/: CMakeLists.txt  (+8 more)
day16/: CMakeLists.txt  README.md  main.c
day16/assets/: quadriliteral.adl  triangle.adl
day16/assets/gl/: 3.fs  3.vs
day16/dx/: application.c  command.c  configuration.h  context.h  input_msgs.h  mesh_instance.h  scene.h  texture.h
day16/dx/adl/: semantical.c
day16/dx/asset/: mesh.c  mesh.h
day16/dx/asset/mesh/: generators.c  generators.h
day16/dx/core/: canvas_msgs.h  hapticals.c  hapticals.h  safe_mul_nx.c
day16/dx/gl/: binding.c  binding.h  buffer.h  context.c  functions.i
day16/dx/scenes/: create_assets.c  mesh_viewer_scene.c  mesh_viewer_scene.h
day17/: CMakeLists.txt  README.md  main.c
day17/assets/: cube.adl  day16-quadriliteral.adl  day16-triangle.adl  day17-cube.adl  day17-octahedron.adl  day18-cube.adl  day18-octahedron.adl  octahedron.adl
day17/dx/: core.h  material.h  mesh.h  scene.h
day17/dx/asm/x64/: _imul128.c
day17/dx/asset/: image.c  mesh.h
day17/dx/asset/mesh/: generators.c
day17/dx/core/: byte_array.h  keyboard_keys.i  os.c  visuals.h
day17/dx/gl/: context.c  context.h  program.h  texture.c  texture.h
day17/dx/gl/wgl/: context.h
day17/dx/scenes/: create_assets.c  mesh_viewer_scene.c  mesh_viewer_scene.h
day19/: CMakeLists.txt  README.md  main.c
day19/assets/: cube.adl  octahedron.adl  palette.adl
day19/dx/: application.h  cbinding.h  configuration.h  core.h  mesh_instance.c  scene.c  scene.h
day19/dx/adl/: reader.c  reader.h  semantical.c  semantical.h  syntactical.c  syntactical.h
day19/dx/adl/semantical/: state.c
day19/dx/asset/: image.c  image.h  mesh.c  mesh_instance.c  mesh_instance.h  palette.c  scene.c
day19/dx/asset/mesh/: generators.c
day19/dx/asset/parser/: read_rgb_u8.c  read_rgb_u8.h
day19/dx/core/: core.h  hapticals.h  object_array.c  object_array.h  pointer_array.c  pointer_hashmap.c  pointer_hashmap.h  safe_mul_nx.h
day19/dx/gl/: program.c  program.h  texture.c
day19/dx/gl/wgl/: wm.c
day19/dx/scenes/: create_assets.c  create_assets.h  mesh_viewer_scene.c  mesh_viewer_scene.h
day5/: CMakeLists.txt  main.c
day5/dx/: core.c
day7/: CMakeLists.txt  README.md  main.c
day7/dx/: application.h  configuration.h
day7/dx/gl/wgl/: wm.c  wm.h
libraries/: CMakeLists.txt
libraries/base/: CMakeLists.txt
libraries/base/dx/: README.md  application.c  application.h  scene.c  scene.h
libraries/base/dx/adl/: diagnostics.c  diagnostics.h  semantical.c  semantical.h  syntactical.c  syntactical.h  word_kind.i
libraries/base/dx/asset/: brushes.h  color.c  image.c  image.h  material.h  mesh.c  mesh.h  mesh_instance.c  mesh_instance.h  mesh_operation.c  mesh_operation.h  palette.c  palette.h  scene.c  scene.h  texture.c  texture.h
libraries/base/dx/val/: buffer.h  cbinding.c  cbinding.h  command.c  command.h  context.c  context.h  material.c  material.h  mesh.c  mesh.h  mesh_instance.c  mesh_instance.h  program.h  program_text.c  program_text.h  texture.h  vbinding.c  vbinding.h
libraries/core/: CMakeLists.txt
libraries/core/dx/: core.h
libraries/core/dx/core/: _string_format.c  _string_format.h  byte_array.c  byte_array.h  canvas_msgs.c  canvas_msgs.h  configuration.h  convert.c  convert.h  core.c  core.h  file_system.c  file_system.h  hapticals.c  hapticals.h  math.c  math.h  memory.c  memory.h  msgs.c  msgs.h  next_power_of_two.c  next_power_of_two.h  object.c  object.h  object_array.h  os.c  os.h  pointer_array.c  pointer_array.h  pointer_hashmap.c  pointer_hashmap.h  safe_add_nx.h  safe_mul_nx.c  safe_mul_nx.h  string.c  string.h  visuals.h
libraries/day10_to_day14/: CMakeLists.txt
libraries/day10_to_day14/base/: CMakeLists.txt  Doxyfile
libraries/day10_to_day14/base/dx/: application.c  application.h
libraries/day10_to_day14/dx/adl/: diagnostics.c
libraries/day10_to_day14/dx/asset/: image.c  material.c  material.h  mesh.h  palette.c
libraries/day10_to_day14/dx/core/: canvas_msgs.h  core.c  core.h  msgs.c  next_power_of_two.h  object.h  os.h  safe_mul_ix.h  string.h
libraries/day10_to_day14/dx/val/: buffer.h  command.c  command.h  context.h  program_text.c
libraries/day10_to_day14/gl/: CMakeLists.txt
libraries/day15_to_day19/: CMakeLists.txt
libraries/day15_to_day19/base/: CMakeLists.txt
libraries/day15_to_day19/base/dx/: README.md
libraries/day15_to_day19/dx/: README.md
libraries/day15_to_day19/dx/adl/: syntactical.h
libraries/day15_to_day19/dx/asset/: color.h  image.h  mesh_instance.h  palette.h  texture.c
libraries/day15_to_day19/dx/core/: core.h  pointer_hashmap.c
libraries/day15_to_day19/dx/val/: cbinding.c  cbinding.h  command.c  mesh.c  mesh.h  mesh_instance.h  program.c  texture.c  vbinding.h
libraries/day15_to_day19/gl/: CMakeLists.txt
libraries/day16_to_day19/: CMakeLists.txt
libraries/day16_to_day19/dx/asset/: material.c  material.h  mesh.h  texture.h
libraries/day16_to_day19/dx/core/: safe_add_nx.h
libraries/ddl/: CMakeLists.txt  README.md
libraries/ddl/dx/: ddl.c  ddl.h
libraries/ddl/dx/ddl/: diagnostics.c  diagnostics.h  node_kind.c  parser.h  word.c  word.h  word_kind.c
libraries/engine/: CMakeLists.txt
libraries/engine/dx/: adl.c  adl.h  application.c  application.h  ddl.c  ddl.h  fps_counter.c  fps_counter.h  scene.c  scene.h
libraries/engine/dx/adl/: context.c  context.h  diagnostics.c  diagnostics.h  enter.c  enter.h  reader.c  reader.h  resolve.c  resolve.h  semantical.c  semantical.h  symbols.c  symbols.h  syntactical.c  syntactical.h
libraries/engine/dx/asset/: brushes.c  brushes.h  color.c  color.h  image.c  image.h  image_operation.c  image_operation.h  material.c  material.h  mesh.c  mesh.h  mesh_instance.c  mesh_instance.h  mesh_operation.c  mesh_operation.h  optics.c  optics.h  palette.c  reference.c  reference.h  scene.c  scene.h  texture.c  texture.h  viewer.c  viewer.h  viewer_instance.c  viewer_instance.h
libraries/gl/: CMakeLists.txt  Doxyfile
tif-writer/: CMakeLists.txt  README.md  main.c
(+463 files in other folders)
