# Copyright (c) 2023 Michael Heilmann. All rights reserved.
# Author: Michael Heilmann (michaelheilmann@primordialmachine.com
# Copyright Copyright (c) 2023 Michael Heilmann. All rights reserved.

cmake_minimum_required(VERSION 3.20)

add_subdirectory(core)

add_subdirectory(day15_to_day19/gl)
add_subdirectory(day15_to_day19/base)

add_subdirectory(day10_to_day14/gl)
add_subdirectory(day10_to_day14/base)
